# OpenVibe-RoboArm

./: CMakeLists.txt  README.md  simple-keyboard-to-stimulations.txt
cmake-modules/: FindThirdPartyFTDI.cmake
contrib/plugins/RoboArm/: CMakeLists.txt
contrib/plugins/RoboArm/src/: CEMSController.cpp  CEMSController.h  CRoboArmController.cpp  CRoboArmController.h  CRoboArmException.cpp  CRoboArmException.h  ovpCBoxAlgorithmRoboArmStream.cpp  ovpCBoxAlgorithmRoboArmStream.h  ovp_defines.h
contrib/roboarm/src/: CRoboArmController.cpp
extras/cmake-modules/: FindThirdPartyFTDI.cmake
extras/contrib/plugins/RoboArm/: CMakeLists.txt
extras/contrib/plugins/RoboArm/src/: CEMSController.cpp  CEMSController.h  CRoboArmController.cpp  CRoboArmController.h  CRoboArmException.cpp  ovpCBoxAlgorithmRoboArmStream.cpp  ovpCBoxAlgorithmRoboArmStream.h  ovp_defines.h  ovp_main.cpp
matlab/: matlab_Initialize.m  matlab_Process.m  matlab_Uninitialize.m
matlab/scenarios/: RoboArm-Filip.xml  RoboArm-FilipEMG.xml  RoboArm-Tony.xml  scenarioLeftChannelsAll.xml  test signal.xml
matlab/validator/: ReadEDF.m  process_signal.m  validator.m
python/: hololens_control.py
src/: CRoboArmController.cpp  CRoboArmController.h  CRoboArmException.cpp  CRoboArmException.h  CRoboArmInitException.cpp  CRoboArmInitException.h  electrode_weights.mat  freq_weights.mat  matlab_Initialize.m  matlab_Process.m  matlab_Uninitialize.m  ovpCBoxAlgorithmRoboArmStream.cpp  ovpCBoxAlgorithmRoboArmStream.h  ovp_defines.h  ovp_main.cpp  scenario.xml  test roboarm.xml  test saved data.xml  tony.csv
